fixed some spacing for pending transactions in transaction list, fixed the subtext for buysell button

--- a/packages/comps/src/components/ConnectAccount/components/AccountDetails/index.less
+++ b/packages/comps/src/components/ConnectAccount/components/AccountDetails/index.less
@@ -204,6 +204,10 @@
             margin-right: @size-4;
           }
 
+          > span.TransactionClear {
+            margin-right: @size-4;
+          }
+
           > .TransactionClear svg {
             cursor: pointer;
             height: @size-12;
@@ -216,7 +220,6 @@
           > a, div {
             display: flex;
             cursor: pointer;
-            margin-right: @size-4;
 
             > svg {
               width: @size-16;
@@ -235,6 +238,8 @@
             display: flex;
             align-items: center;
             margin-left: auto;
+            height: @size-16;
+            width: @size-16;
 
             &.Success > svg {
               > path,
