--- a/packages/simplified/src/modules/common/buttons.styles.less
+++ b/packages/simplified/src/modules/common/buttons.styles.less
@@ -34,7 +34,7 @@
   flex-flow: column nowrap;
   padding: 0 @size-16;
 
-  > span {
+  > span:first-of-type {
     .text-20-bold;
 
     text-transform: none;
